--- a/EDA_AirQuality_FM1105.ipynb
+++ b/EDA_AirQuality_FM1105.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "id": "a73d042b",
    "metadata": {},
-   "source": [
-    "\n"
+  "source": [
+    "\n",
+    "#  Exploratory Data Analysis (EDA) on Air Quality Dataset  \n",
+    "**Student Roll No:** FM1105  \n",
+    "**Dataset:** AirQuality.csv  \n",
+    "**Objective:** Perform detailed exploratory data analysis to understand the air quality trends and relationships between pollution levels and environmental parameters.\n"
+   ]
   },
   {
    "cell_type": "code",
